--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_PORT=3001
+REACT_APP_API_PORT=3001
+REACT_APP_API_INVENTORY_DNS=https://kanri-inventory-back.up.railway.app
+REACT_APP_API_AUTH_URL=https://kanri-auth-back.up.railway.app/
